--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/thecohor/public.html
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    #- /bin/cp index.html $DEPLOYPATH
+    #- /bin/cp style.css $DEPLOYPATH
+    - /bin/cp -r * $DEPLOYPATH
