--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/thecohor/public_html
-    - /bin/cp -r * $DEPLOYPATH
-    #- /bin/cp index.html $DEPLOYPATH
-    #- /bin/cp style.css $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp style.css $DEPLOYPATH
 
