--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/thecohor/public_html
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
-
+    - export DEPLOYPATH=/home/thecohor/public_html/
+    - /bin/cp -R TheCohortsPWA $DEPLOYPATH
